@startuml

title __TASK2's Class Diagram__\n

  namespace ru.fafurin {
    class ru.fafurin.Main {
    }
  }
  

  namespace ru.fafurin {
    namespace enums {
      enum Color {
      }
    }
  }
  

  namespace ru.fafurin {
    namespace models {
      class ru.fafurin.models.Game {
      }
    }
  }
  

  namespace ru.fafurin {
    namespace models {
      abstract class ru.fafurin.models.Hero {
      }
    }
  }
  

  namespace ru.fafurin {
    namespace models {
      class ru.fafurin.models.Human {
      }
    }
  }
  

  namespace ru.fafurin {
    namespace models {
      class ru.fafurin.models.Orc {
      }
    }
  }
  

  namespace ru.fafurin {
    namespace models {
      namespace abilities {
        class ru.fafurin.models.abilities.Abilities {
        }
      }
    }
  }
  

  namespace ru.fafurin {
    namespace models {
      namespace abilities {
        interface ru.fafurin.models.abilities.Buff {
        }
      }
    }
  }
  

  namespace ru.fafurin {
    namespace models {
      namespace abilities {
        interface ru.fafurin.models.abilities.Debuff {
        }
      }
    }
  }
  

  namespace ru.fafurin {
    namespace utils {
      class ru.fafurin.utils.FileUtil {
      }
    }
  }
  

  ru.fafurin.models.Game o-- ru.fafurin.models.Human : human
  ru.fafurin.models.Game o-- ru.fafurin.models.Orc : orc
  ru.fafurin.models.Hero -up-|> ru.fafurin.models.abilities.Abilities
  ru.fafurin.models.Human -up-|> ru.fafurin.models.Hero
  ru.fafurin.models.Orc -up-|> ru.fafurin.models.Hero
  ru.fafurin.models.abilities.Abilities .up.|> ru.fafurin.models.abilities.Buff
  ru.fafurin.models.abilities.Abilities .up.|> ru.fafurin.models.abilities.Debuff


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
